<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.navigation.NavigationActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/navTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/navigation"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/navAddressStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/departure_address"
        android:padding="20dp"
        android:background="@color/background_card"
        app:layout_constraintTop_toBottomOf="@id/navTitle"/>

    <EditText
        android:id="@+id/navAddressStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/arrival_address"
        android:padding="20dp"
        android:background="@color/background_card"
        app:layout_constraintTop_toBottomOf="@id/navAddressStart"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/navButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:cornerRadius="20dp"
        android:text="@string/search"
        android:layout_margin="30dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/navAddressStop"/>

</androidx.constraintlayout.widget.ConstraintLayout>