<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.filter.FilterActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filterTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/filterNameStation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/name_station_filter"
        android:padding="20dp"
        android:background="@color/background_card"
        app:layout_constraintTop_toBottomOf="@id/filterTittle"/>

    <EditText
        android:id="@+id/filterBikeAvailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="number"
        android:hint="@string/bike_available_filter"
        android:padding="20dp"
        android:background="@color/background_card"
        app:layout_constraintTop_toBottomOf="@id/filterNameStation"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filterTittleSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_only_open_station_filter"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@id/filterSwitch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterBikeAvailable"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/filterSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterBikeAvailable"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:cornerRadius="20dp"
        android:text="@string/search"
        android:layout_margin="30dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/filterSwitch"/>

</androidx.constraintlayout.widget.ConstraintLayout>