<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:elevation="30dp"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/background_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <ImageButton
                android:id="@+id/detail"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_info"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:layout_marginEnd="6dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_card"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginVertical="5dp"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/address_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_card"
                android:textSize="12sp"
                android:layout_margin="5dp"
                android:layout_marginVertical="5dp"
                app:layout_constraintTop_toBottomOf="@id/title_card"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/available_bike_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_bike_card"
                android:textSize="12sp"
                android:layout_marginVertical="5dp"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@id/address_card"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/available_stand_bike_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_park_bike_card"
                android:textSize="12sp"
                android:layout_marginVertical="5dp"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@id/available_bike_card"
                app:layout_constraintLeft_toLeftOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>